bin/testsuite/tests/compiler/src/errors/compiler4459.swg
#global testerror "Err0094"

#[Swag.Macro]
func toto(stmt: #code void)
{
    #macro
    {
        #inject(stmt)
    }
}

#test
{
    toto()
    {
        @print("x")
    }
}
